@@ -229,8 +229,8 @@ namespace libtorrent
 			, ps.proxy_tracker_connections ? &ps : NULL
 			, 5, user_agent, bind_interface()
 			, tracker_req().event == tracker_request::stopped
-				? resolver_interface::prefer_cache
-				: resolver_interface::abort_on_shutdown
+				? resolver_interface::cache_only : 0
+				| resolver_interface::abort_on_shutdown
 #ifndef TORRENT_NO_DEPRECATE
 			, tracker_req().auth
 #else
