@@ -87,22 +87,9 @@ namespace libtorrent
 		}
 	}
 
-	void resolver::async_resolve(std::string const& host, int flags
+	void resolver::async_resolve(std::string const& host, int const flags
 		, resolver_interface::callback_t const& h)
 	{
-		cache_t::iterator i = m_cache.find(host);
-		if (i != m_cache.end())
-		{
-			// keep cache entries valid for m_timeout seconds
-			if ((flags & resolver_interface::prefer_cache)
-				|| i->second.last_seen + m_timeout >= aux::time_now())
-			{
-				error_code ec;
-				m_ios.post(boost::bind(h, ec, i->second.addresses));
-				return;
-			}
-		}
-
 		// special handling for raw IP addresses. There's no need to get in line
 		// behind actual lookups if we can just resolve it immediately.
 		error_code ec;
@@ -112,6 +99,27 @@ namespace libtorrent
 			std::vector<address> addresses;
 			addresses.push_back(ip);
 			m_ios.post(boost::bind(h, ec, addresses));
+			return;
+		}
+		ec.clear();
+
+		cache_t::iterator i = m_cache.find(host);
+		if (i != m_cache.end())
+		{
+			// keep cache entries valid for m_timeout seconds
+			if ((flags & resolver_interface::cache_only)
+				|| i->second.last_seen + m_timeout >= aux::time_now())
+			{
+				m_ios.post(boost::bind(h, ec, i->second.addresses));
+				return;
+			}
+		}
+
+		if (flags & resolver_interface::cache_only)
+		{
+			// we did not find a cache entry, fail the lookup
+			m_ios.post(boost::bind(h, boost::asio::error::host_not_found
+					, std::vector<address>()));
 			return;
 		}
 
